--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-03-22  Gergely Nagy  <8@free.bsd.hu>
+
+	* debian/control: removed build-dependency on x-terminal-emulator,
+	downgraded xterm | x-terminal-emulator dependency to a recommends
+	only
+
 2001-03-19  shawn  <sabetts@diggin.lamenet.tmp>
 
 	* src/main.c (ratpoison_longopts): add --command to recognized
