--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-04-01  shawn  <sabetts@diggin.lamenet.tmp>
+
+	* src/manage.c (maximize_normal): fixed maximizing problems for
+	windows with resize hints.
+	(maximize_transient): likewise
+
 2001-03-31  shawn  <sabetts@diggin.lamenet.tmp>
 
 	* src/split.h (find_window_for_frame): new function prototype
