--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2001-04-10  Gergely Nagy  <algernon@debian.org>
 
-	* src/main.c (main): initialie command to NULL, silences an
+	* src/main.c (main): initialize command to NULL, silences an
 	annoying warning
 
 	* debian/rules: sync it up a bit, so it works with both
